pkl-core/src/test/files/LanguageSnippetTests/input/errors/cannotFindStdLibModule.pkl
import "pkl:nonExisting"

res1 = nonExisting.bar
